--- a/xll_ml.vcxproj
+++ b/xll_ml.vcxproj
@@ -212,11 +212,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="fms_option.h" />
+    <ClInclude Include="fms_option_black.h" />
+    <ClInclude Include="fms_dual.h" />
     <ClInclude Include="fms_error.h" />
     <ClInclude Include="fms_linalg.h" />
     <ClInclude Include="fms_perceptron.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="xll_black.cpp" />
     <ClCompile Include="xll_ml.cpp" />
   </ItemGroup>
   <ItemGroup>
