--- a/xll_ml.vcxproj.filters
+++ b/xll_ml.vcxproj.filters
@@ -24,9 +24,21 @@
     <ClInclude Include="fms_error.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fms_dual.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fms_option.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fms_option_black.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="xll_ml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="xll_black.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
